[package]
name = "mpqtool"
version = "0.1.3"
authors = ["ElusiveMori <mori@reu.moe>"]
description = "A command-line tool for reading and creating Blizzard's MPQ archives"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ElusiveMori/ceres-mpqtool"
keywords = ["mpq", "blizzard", "mopaq", "warcraft"]
categories = ["encoding", "parsing", "command-line-utilities"]
license = "MIT"

[dependencies]
ceres-mpq = "0.1.6"
clap = "2.33.0"
err-derive = "0.1.5"
glob = "0.3.0"
walkdir = "2.2.9"
path-absolutize = "1.1.6"
